--- a/src/app/layouts/about-us/about-us.component.html
+++ b/src/app/layouts/about-us/about-us.component.html
@@ -3,60 +3,48 @@
     <div class="story-container">
         <div class="our-tech-container">
             <h3 class="text-center">
-                Our Technology
+                What is ESG Report?
             </h3>
             <p>
-                Our code generation engine enables API providers to generate SDKs for their APIs within minutes and at a
-                fraction of the cost. We provide tools like our API editor and API transformer to further aid API
-                providers in minimizing the time required to ship excellent quality SDKs to the developers using their
-                APIs. Our code generation engine is also capable of generating succinct and error-free documentation for
-                APIs and SDKs, both. The documentation for the SDKs includes dynamic screenshots detailing usage
-                instructions tailored to the provider's specific API and also code snippets showing example usage. As
-                the cherry on the cake, we provide beautifully designed DX portals to encapsulate this documentation.
+                ESG reporting is the disclosure of information about the environment, society, and corporate governance.
+                Its goal is to bring attention to a company's ESG operations, enhance investor transparency, and
+                encourage other businesses to follow suit.
             </p>
         </div>
         <div class="container-divider"></div>
         <div class="origin-story-container">
             <h3 class="text-center">
-                Origin Story
+                What do ESG reports include?
             </h3>
             <p>
-                While doing research work for their PhDs from the University of Auckland in 2014, our founders came
-                across one of the API industry's pain points: SDKs. They realized that API providers who spent hundreds
-                of thousands of dollars every year on improving developer experience, by providing SDKs and
-                user-friendly documentation were able to reach a wider developer audience for their APIs compared to API
-                providers who weren't able to do so.
+                ESG reports contain both qualitative and quantitative data about its three main subjects.
             </p>
+            <h5>Environmental:</h5>
             <p>
-                It was so clear that even though writing SDKs and documentation was a difficult and expensive task, it
-                followed repeatable patterns which could be defined as logic blocks in a code generation engine. So, as
-                a research project, they started working on a code generation engine which dynamically generated SDKs
-                using API description as input.
+
+                How an organization is addressing climate change
+                How an organization is cutting carbon emissions
+                How the organization is preventing deforestation, enhancing air and water quality, protecting
+                biodiversity, or properly managing its waste
+                How the organization manages its supply chain and uses resources in an ethical manner
+                What steps is the organization taking to lower its emissions?
             </p>
+            <h5>Social:</h5>
             <p>
-                After a rigorous journey, this research project was selected as a candidate for commercialization by
-                Return on Science (a NZ national research commercialization program focused on bringing new academic
-                research to market) and the concept was transformed into a product i.e. APIMatic.
+                How an organization cares for its employees and workplace
+                Initiatives promoting gender, BIPOC, and LGBTQ+ inclusivity
+                Engagement of employees at the company
+                preserving the privacy of data
+                Community participation
+                Employment laws and labour standards
             </p>
-        </div>
-        <div class="container-divider"></div>
-        <div class="today-container">
-            <h3 class="text-center">
-                Flash Forward Today
-            </h3>
+            <h5>Governance:</h5>
             <p>
-                APIMatic has come a long way since its inception 3 years ago. Having started with only generating SDKs,
-                APIMatic now provides solutions in other areas of developer experience as well. Presently, APIMatic is
-                used by numerous organizations around the world to:
+                The internal controls of a corporation
+                Leadership, board composition, executive compensation, audit committee structure, shareholder rights,
+                bribery, lobbying, political contributions, and whistle-blower programs policies, principles, and
+                procedures
             </p>
-            <ul>
-                <li>Create and store definitions of their APIs</li>
-                <li>Generate SDKs for their APIs for 10 platforms</li>
-                <li>Keep these SDKs in sync with API updates</li>
-                <li>Convert API descriptions into multiple formats (Swagger, API Blueprint, RAML etc.)</li>
-                <li>Generate beautiful documentation for their APIs and SDKs</li>
-                <li>Generate complete Developer Experience API Portals</li>
-            </ul>
         </div>
         <div class="container-divider"></div>
     </div>
