--- a/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
+++ b/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
@@ -62,12 +62,12 @@
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -tomato"><span>Donations</span></div>
+                    <div class="card -tomato"><span>Contributions to political parties</span></div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="cards">
-                    <div class="card -ochre"><span>Contributions to political parties</span></div>
+                    <div class="card -ochre"><span>Donations</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
