--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -4,17 +4,17 @@
         <div class="row">
             <!-- Left-Side -->
             <div class="col-md-6 col-sm-12  left">
-                <h1 class="heading"><span>G</span>erman</h1>
-                <h1 class="heading"><span>S</span>ustainability <span>M</span>onitor</h1>
+                <h1 class="heading"><span>E</span>nvironmental</h1>
+                <h1 class="heading"><span>S</span>ocial &</h1>
+                <h1 class="heading"><span>G</span>overnance</h1>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                    of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged.
+                    Qualitative and Quantitative Data extraction from different corporate portals and making them
+                    interactive by visualizing different form of graphs. One location for all the ESG Reports.
                 </p>
-                <!-- <button type="button" class="btn first px-5 py-2">More Details</button> -->
+                <button [routerLink]="['/about-us']" routerLinkActive="router-link-active" type="button"
+                    class="btn first px-5 py-2">More Details</button>
                 <a routerLink="/dashboard"><button type="button" class="btn first px-5 py-2 mx-3">
-                    View Reports</button>
+                        View Dashboard</button>
                 </a>
             </div>
             <!-- Rigth-Side -->
@@ -24,4 +24,3 @@
         </div>
     </div>
 </section>
-<!-- Header End -->
