--- a/src/app/layouts/companies-list/companies-list.component.html
+++ b/src/app/layouts/companies-list/companies-list.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <!-- Left-Side -->
             <div class="col-md-8 col-sm-12  left">
-                <h1 class="heading"><span>C</span>ompany</h1>
+                <h1 class="heading"><span>C</span>ompanies</h1>
             </div>
             <!-- Rigth-Side -->
             <div class="col-md-4 col-sm-12 right search-box input-group">
