--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -4,9 +4,9 @@
         <div class="copyright">
             &copy; Copyright <strong><span>Frankfurt University of Applied Sciences</span></strong>. All Rights Reserved
         </div>
-        <div class="credits">
+        <!-- <div class="credits">
             Designed by <a href="https://bootstrapmade.com/">Priyank</a>
-        </div>
+        </div> -->
     </div>
 </footer>
 <!-- End Footer -->
