--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -13,6 +13,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item px-1 py-2">
+                    <a class="nav-link active" aria-current="page" [routerLink]="['/home']"
+                        routerLinkActive="router-link-active">Home</a>
+                </li>
+                <li class="nav-item px-1 py-2">
                     <a class="nav-link active" aria-current="page" [routerLink]="['/about-us']" routerLinkActive="router-link-active" >About Us</a>
                 </li>
                 <li class="nav-item px-1 py-2">
