--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -309,3 +309,15 @@ a {
     align-items: center;
     justify-content: center;
 }
+
+.router-link-active::after {
+    content: "";
+    width: 0%;
+    height: 3px;
+    display: block;
+    margin-top: 2px;
+    bottom: 0;
+    background: var(--font-color1);
+    opacity: 0.5;
+    transition: 0.5s ease;
+}
