--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -14,22 +14,22 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item px-1 py-2">
                     <a class="nav-link active" aria-current="page" [routerLink]="['/home']"
-                        routerLinkActive="router-link-active">Home</a>
+                        routerLinkActive="active">Home</a>
                 </li>
                 <li class="nav-item px-1 py-2">
-                    <a class="nav-link active" aria-current="page" [routerLink]="['/about-us']" routerLinkActive="router-link-active" >About Us</a>
+                    <a class="nav-link active" aria-current="page" [routerLink]="['/about-us']" routerLinkActive="active" >About Us</a>
                 </li>
                 <li class="nav-item px-1 py-2">
-                    <a [routerLink]="['/company/list']" routerLinkActive="router-link-active"  class="nav-link">Companies</a>
+                    <a [routerLink]="['/company/list']" routerLinkActive="active"  class="nav-link">Companies</a>
                 </li>
                 <li class="nav-item px-1 py-2 py-2">
-                    <a [routerLink]="['/dashboard']" routerLinkActive="router-link-active"  class="nav-link">Dashboard</a>
+                    <a [routerLink]="['/dashboard']" routerLinkActive="active"  class="nav-link">Dashboard</a>
                 </li>
                 <!-- <li class="nav-item px-1 py-2 py-2">
-                    <a [routerLink]="['/emission/reports']" routerLinkActive="router-link-active" class="nav-link">Emission Reports</a>
+                    <a [routerLink]="['/emission/reports']" routerLinkActive="active" class="nav-link">Emission Reports</a>
                 </li> -->
                 <li class="nav-item px-1 py-2 py-2">
-                    <a [routerLink]="['repository/view']" routerLinkActive="router-link-active" class="nav-link">PDF
+                    <a [routerLink]="['repository/view']" routerLinkActive="active" class="nav-link">PDF
                         Repository</a>
                 </li>
 
