--- a/src/app/layouts/companies-list/company-details/company-details.component.html
+++ b/src/app/layouts/companies-list/company-details/company-details.component.html
@@ -36,7 +36,7 @@
                         <a [href]="item" title="Download" download rel="noopener noreferrer" target="_blank"><img src="/assets/img/pdf.png" alt="" width="130px"></a>
                     </div>
                     <div style='margin-top:10px;'>
-                        <p style='text-align: center;    font-size: smaller;'>{{ _getreportsName(item) }}</p>
+                        <p style='text-align: center; font-size: smaller; width: 11rem; word-break: break-word;'>{{ _getreportsName(item) }}</p>
                     </div>
                 </div>
             </ng-container>
