--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-12 mb-3 mt-5">
-            <iframe id="inlineFrameExample" title="Inline Frame Example"  width="100%" height="1000px"
+        <div class="col-12 mb-3 mt-5">
+            <iframe id="inlineFrameExample" title="Inline Frame Example"  width="99%" style="min-height: 100vh;"
                 src="http://127.0.0.1:8050/">
             </iframe>
         </div>
