--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -32,6 +32,9 @@
                     <a [routerLink]="['repository/view']" routerLinkActive="active" class="nav-link">PDF
                         Repository</a>
                 </li>
+                <li class="nav-item px-1 py-2 py-2">
+                    <a [routerLink]="['/contact-us']" routerLinkActive="active" class="nav-link">Contact-us</a>
+                </li>
 
                 
                 <!-- <li class="nav-item dropdown px-3 py-2">
