--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -5,6 +5,6 @@
     <!-- Showcase -->
     <section class="showcase">
         <div class="container">
-            <img src="/assets/Adv..png" alt="" width="100%">
+            <img src="/assets/Adv.png" alt="" width="100%">
         </div>
     </section>
