--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12 mb-3 mt-5">
             <iframe id="inlineFrameExample" title="Inline Frame Example"  width="99%" style="min-height: 100vh;"
-                src="http://127.0.0.1:8050/">
+                src="http://ec2-3-71-255-155.eu-central-1.compute.amazonaws.com/dashboard:8050/">
             </iframe>
         </div>
     </div>
