--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -33,7 +33,7 @@
                         Repository</a>
                 </li>
                 <li class="nav-item px-1 py-2 py-2">
-                    <a [routerLink]="['/contact-us']" routerLinkActive="active" class="nav-link">Contact-us</a>
+                    <a [routerLink]="['/contact-us']" routerLinkActive="active" class="nav-link">Contact Us</a>
                 </li>
 
                 
