small name changes

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -30,7 +30,7 @@
                 </li> -->
                 <li class="nav-item px-1 py-2 py-2">
                     <a [routerLink]="['repository/view']" routerLinkActive="active" class="nav-link">PDF
-                        Repository</a>
+                        Reports</a>
                 </li>
                 <li class="nav-item px-1 py-2 py-2">
                     <a [routerLink]="['/contact-us']" routerLinkActive="active" class="nav-link">Contact Us</a>
