--- a/src/app/layouts/contact-us/contact-us.component.html
+++ b/src/app/layouts/contact-us/contact-us.component.html
@@ -3,7 +3,7 @@
         <div class="row m-b-10">
             <div class="col-12 text-center">
                 <div class="heading-part align-center">
-                    <h2 class="text-center m-b-10">Contact-us</h2>
+                    <h2 class="text-center m-b-10">Contact Us</h2>
                 </div>
             </div>
             
