--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -4,12 +4,22 @@
         <div class="row">
             <!-- Left-Side -->
             <div class="col-md-6 col-sm-12  left">
-                <h1 class="heading"><span>E</span>nvironmental</h1>
-                <h1 class="heading"><span>S</span>ocial &</h1>
-                <h1 class="heading"><span>G</span>overnance</h1>
+                <h1 class="heading"><span>S</span>ustainability</h1>
+                <h1 class="heading"><span>M</span>onitor</h1>
                 <p>
-                    Qualitative and Quantitative Data extraction from different corporate portals and making them
-                    interactive by visualizing different form of graphs. One location for all the ESG Reports.
+                    Sustainability Monitor provides a public repository for corporate sustainability reports and annual financial reports with information about firms’ environmental, social, and governance (ESG) impact for a broad span of firms and years. 
+                </p>
+                <p>
+                    Because data about firms’ ESG impact can be spread across different formats, such as text, images, or tables, obtaining and analyzing these data is typically not a straightforward task. We rely on state-of-the-art machine learning and artificial intelligence methods to extract quantitative and qualitative data from sustainability reports. Based on these data, we provide interactive dashboards that enable interested stakeholders visualize selected ESG performance indicators, comparing across industries, firms, and years.
+                </p>
+                <p>
+                    This portal is part of an academic project at the Engineering and Informatics department of the Frankfurt University of Applied Sciences. Our vision is to increase transparency for consumers, investors, firms, and policy makers about firms’ ESG goals and performance. 
+                </p>    
+                <p>
+                    Who is behind this initiative? Go to <a [routerLink]="['/about-us']">About Us</a> to learn more about our project and the involved team. 
+                </p>    
+                <p>
+                    We welcome support from the community and interested stakeholders to continue developing this portal and improve sustainability data access for informed decision making and research. Would you like to support our project? Please <a [routerLink]="['/contact-us']">contact us</a> using our contact form or write us at info@sustainabilitymonitor.org.
                 </p>
                 <button [routerLink]="['/about-us']" routerLinkActive="router-link-active" type="button"
                     class="btn first px-5 py-2">More Details</button>
