--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -13,7 +13,7 @@
                     Because data about firms’ ESG impact can be spread across different formats, such as text, images, or tables, obtaining and analyzing these data is typically not a straightforward task. We rely on state-of-the-art machine learning and artificial intelligence methods to extract quantitative and qualitative data from sustainability reports. Based on these data, we provide interactive dashboards that enable interested stakeholders visualize selected ESG performance indicators, comparing across industries, firms, and years.
                 </p>
                 <p>
-                    This portal is part of an academic project at the Engineering and Informatics department of the Frankfurt University of Applied Sciences. Our vision is to increase transparency for consumers, investors, firms, and policy makers about firms’ ESG goals and performance. 
+                    This portal is part of an academic project at the Engineering and Informatics department of the <a href="https://www.frankfurt-university.de/en/">Frankfurt University of Applied Sciences</a>. Our vision is to increase transparency for consumers, investors, firms, and policy makers about firms’ ESG goals and performance. 
                 </p>    
                 <p>
                     Who is behind this initiative? Go to <a [routerLink]="['/about-us']">About Us</a> to learn more about our project and the involved team. 
