contact and about us

--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <!-- Left-Side -->
-            <div class="col-md-6 col-sm-12  left">
+            <div class="col-md-8 col-sm-12  left mt-5">
                 <h1 class="heading"><span>S</span>ustainability</h1>
                 <h1 class="heading"><span>M</span>onitor</h1>
                 <p>
@@ -28,7 +28,7 @@
                 </a>
             </div>
             <!-- Rigth-Side -->
-            <div class="col-md-6 col-sm-12 right">
+            <div class="col-md-4 col-sm-12 right">
                 <img src="/assets/cmp-1.png" alt="" width="100%">
             </div>
         </div>
