--- a/src/app/layouts/home/company/company.component.html
+++ b/src/app/layouts/home/company/company.component.html
@@ -5,6 +5,7 @@
 
         <header class="section-heade">
             <h1 class="heading"><span>C</span>ompanies</h1>
+            <button class="nav-item px-1 py-2" [routerLink]="['/company/list']" routerLinkActive="active"  class="nav-link">View More</button>
         </header>
 
         <div class="wrapper-grey padded">
