--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -4,8 +4,7 @@
         <div class="row">
             <!-- Left-Side -->
             <div class="col-md-6 col-sm-12  left">
-                <h1 class="heading"><span>S</span>ustainability</h1>
-                <h1 class="heading"><span>M</span>onitor</h1>
+                <h1 class="heading"><span>S</span>ustainability<span> M</span>onitor</h1>
                 <p>
                     Sustainability Monitor provides a public repository for corporate sustainability reports and annual financial reports with information about firms’ environmental, social, and governance (ESG) impact for a broad span of firms and years. 
                 </p>
@@ -22,9 +21,9 @@
                     We welcome support from the community and interested stakeholders to continue developing this portal and improve sustainability data access for informed decision making and research. Would you like to support our project? Please <a [routerLink]="['/contact-us']">contact us</a> using our contact form or write us at info@sustainabilitymonitor.org.
                 </p>
                 <button [routerLink]="['/about-us']" routerLinkActive="router-link-active" type="button"
-                    class="btn first px-5 py-2">More Details</button>
+                    class="btn first px-5 py-2">About Us</button>
                 <a routerLink="/dashboard"><button type="button" class="btn first px-5 py-2 mx-3">
-                        View Dashboard</button>
+                        View Dashboards</button>
                 </a>
             </div>
             <!-- Rigth-Side -->
