push new changies

--- a/src/app/layouts/about-us/about-us.component.html
+++ b/src/app/layouts/about-us/about-us.component.html
@@ -1,51 +1,53 @@
-<div id="about-main">
-
-    <div class="story-container">
-        <div class="our-tech-container">
-            <h3 class="text-center">
-                What is ESG Report?
-            </h3>
-            <p>
-                ESG reporting is the disclosure of information about the environment, society, and corporate governance.
-                Its goal is to bring attention to a company's ESG operations, enhance investor transparency, and
-                encourage other businesses to follow suit.
-            </p>
+<div class="container mt-5">
+    <div id="about-main row">
+        <div class=" col-12 story-container">
+            <div class="our-tech-container">
+                <h3 class="text-left mb-4">
+                    What is ESG Report?
+                </h3>
+                <p>
+                    ESG reporting is the disclosure of information about the environment, society, and corporate governance.
+                    Its goal is to bring attention to a company's ESG operations, enhance investor transparency, and
+                    encourage other businesses to follow suit.
+                </p>
+            </div>
+            <div class="container-divider m-5"></div>
+            <div class="origin-story-container">
+                <h3 class="text-left mb-4">
+                    What do ESG reports include?
+                </h3>
+                <p class="">
+                    ESG reports contain both qualitative and quantitative data about its three main subjects.
+                </p>
+                <h5>Environmental:</h5>
+                <p>
+    
+                    How an organization is addressing climate change
+                    How an organization is cutting carbon emissions
+                    How the organization is preventing deforestation, enhancing air and water quality, protecting
+                    biodiversity, or properly managing its waste
+                    How the organization manages its supply chain and uses resources in an ethical manner
+                    What steps is the organization taking to lower its emissions?
+                </p>
+                <h5>Social:</h5>
+                <p>
+                    How an organization cares for its employees and workplace
+                    Initiatives promoting gender, BIPOC, and LGBTQ+ inclusivity
+                    Engagement of employees at the company
+                    preserving the privacy of data
+                    Community participation
+                    Employment laws and labour standards
+                </p>
+                <h5>Governance:</h5>
+                <p>
+                    The internal controls of a corporation
+                    Leadership, board composition, executive compensation, audit committee structure, shareholder rights,
+                    bribery, lobbying, political contributions, and whistle-blower programs policies, principles, and
+                    procedures
+                </p>
+            </div>
+            <div class="container-divider"></div>
         </div>
-        <div class="container-divider"></div>
-        <div class="origin-story-container">
-            <h3 class="text-center">
-                What do ESG reports include?
-            </h3>
-            <p>
-                ESG reports contain both qualitative and quantitative data about its three main subjects.
-            </p>
-            <h5>Environmental:</h5>
-            <p>
-
-                How an organization is addressing climate change
-                How an organization is cutting carbon emissions
-                How the organization is preventing deforestation, enhancing air and water quality, protecting
-                biodiversity, or properly managing its waste
-                How the organization manages its supply chain and uses resources in an ethical manner
-                What steps is the organization taking to lower its emissions?
-            </p>
-            <h5>Social:</h5>
-            <p>
-                How an organization cares for its employees and workplace
-                Initiatives promoting gender, BIPOC, and LGBTQ+ inclusivity
-                Engagement of employees at the company
-                preserving the privacy of data
-                Community participation
-                Employment laws and labour standards
-            </p>
-            <h5>Governance:</h5>
-            <p>
-                The internal controls of a corporation
-                Leadership, board composition, executive compensation, audit committee structure, shareholder rights,
-                bribery, lobbying, political contributions, and whistle-blower programs policies, principles, and
-                procedures
-            </p>
-        </div>
-        <div class="container-divider"></div>
     </div>
 </div>
+<app-team></app-team>
